--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.1.10",
-        "vue-resource": "^1.3.4",
         "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.1"
+        "stylus-loader": "^3.0.1",
+        "vue": "^2.1.10",
+        "vue-resource": "^1.3.4"
+    },
+    "dependencies": {
+        "fullcalendar": "^3.7.0",
+        "jquery": "^3.2.1",
+        "materialize-css": "^0.100.2",
+        "moment": "^2.19.4",
+        "sweetalert": "^2.0.8",
+        "vue-router": "^3.0.1"
     }
 }
