Removed Laravel Passport - Swiching to traditional Laravel app
Changed vue directories
- moved view directory files to components directory
- removed view directory
- removed model directory

Changed vue setup
- removed router from app.js and package.json(vue-router)
- removed all references to router

--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "jquery": "^3.2.1",
         "materialize-css": "^0.100.2",
         "moment": "^2.19.4",
-        "sweetalert": "^2.0.8",
-        "vue-router": "^3.0.1"
+        "sweetalert": "^2.0.8"
     }
 }
